Fixed an issue where tag badge would not wrap.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -141,8 +141,7 @@ div.header > div.order {
 }
 .paper.card > footer {
   display: inline-flex;
-  margin: 0 0 0 15px;
-  width: 100%;
+  margin: 15px;
 }
 .paper.card > footer > span {
   margin: 5px 5px 0 5px;
